去掉net部分
